# data_handler

./: .gitignore  Makefile  README.md  pyproject.toml
data_handler/: __init__.py  __main__.py  decorator.py  dh_typing.py  env.py  event.py  logger.py
data_handler/apis/: __init__.py  email.py  sms.py  wx.py
data_handler/models/: __init__.py  base.py  excution_record.py  notification_model.py
data_handler/services/: __init__.py  excution_record.py
mgtg_msgntf/: __init__.py  __main__.py  constant.py  deco.py  dh_typing.py  env.py  event.py  exception.py  logger.py  notify.py  settings.py
mgtg_msgntf/apis/: __init__.py  wx.py
mgtg_msgntf/dao/: excution_record.py
mgtg_msgntf/model/: __init__.py  base.py  excution_record.py  notification.py
schema/: 1.sql
tests/: demo_0.py  test_0.py  test_1.py
