[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "data_handler"
dependencies = [
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.0",
    "click>=8.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
]
dynamic = ["version"]
description = "data handler."
requires-python = ">=3.8"
authors = [
    {name = "linlei", email = "linlei@migu.cn"},
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["data_handler*"]
namespaces = false


[tool.setuptools_scm]
version_file = "data_handler/_version.py"
local_scheme = "no-local-version"


# [project.scripts]
# mgserver = "data_handler.__main__:main"