[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "mgtg_msgntf"
dependencies = [
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.0",
    "click>=8.0.0",
    "requests>=2.31.0",
]
dynamic = ["version"]
description = "mgtg_msgntf."
requires-python = ">=3.8"
authors = [
    {name = "linlei", email = "linlei@migu.cn"},
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["mgtg_msgntf*"]
namespaces = false


[tool.setuptools_scm]
version_file = "mgtg_msgntf/_version.py"
local_scheme = "no-local-version"